WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206366
Regression(
r253224
) No longer able to prevent a tab from closing via the beforeunload prompt
https://bugs.webkit.org/show_bug.cgi?id=206366
Summary
Regression(r253224) No longer able to prevent a tab from closing via the befo...
Chris Dumez
Reported
2020-01-16 11:50:04 PST
We are no longer able to prevent a tab from closing via the beforeunload prompt since
r253224
.
Attachments
Patch
(11.62 KB, patch)
2020-01-16 11:55 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-01-16 11:50:29 PST
<
rdar://problem/58537467
>
Chris Dumez
Comment 2
2020-01-16 11:55:50 PST
Created
attachment 387941
[details]
Patch
Geoffrey Garen
Comment 3
2020-01-16 13:51:01 PST
Comment on
attachment 387941
[details]
Patch r=me are the iOS-wk2 EWS crashes related?
Chris Dumez
Comment 4
2020-01-16 14:12:51 PST
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 387941
[details]
> Patch > > r=me > > are the iOS-wk2 EWS crashes related?
Doesn't look like it, the bubbles are green now.
WebKit Commit Bot
Comment 5
2020-01-16 14:57:48 PST
Comment on
attachment 387941
[details]
Patch Clearing flags on attachment: 387941 Committed
r254711
: <
https://trac.webkit.org/changeset/254711
>
WebKit Commit Bot
Comment 6
2020-01-16 14:57:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug